--- a/style/styles.css
+++ b/style/styles.css
@@ -7,14 +7,14 @@ body{
     color: #d4d4d4;
     font-size: 8rem;
     font-family: 'Arial';
-    margin-top: 50px;
+    margin-top: 10rem;
 }
 
 .title{
     color: #d4d4d4;
     font-size: 3rem;
     font-family: 'Arial';
-    margin-top: 50px;
+    margin-top: 5rem;
 }
 
 #menu{
@@ -28,6 +28,7 @@ body{
     background-color: #b0e0e6;
     text-align: center;
     width: 20rem;
+    margin: 0 0.5rem;
     text-decoration: none;
     font-size: 2rem;
     border-radius: 5rem;
